<?xml version="1.0"?>
<package format="2">
  <name>sciroc</name>
  <version>0.0.0</version>
  <description>The sciroc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgines@todo.todo">jgines</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>bica_planning</build_depend>
  <build_depend>bica</build_depend>
  <build_depend>bica_graph</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>darknet_ros_3d_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>bica_planning</build_export_depend>
  <build_export_depend>bica</build_export_depend>
  <build_export_depend>bica_graph</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>darknet_ros_3d_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>bica_planning</exec_depend>
  <exec_depend>bica</exec_depend>
  <exec_depend>bica_graph</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>darknet_ros_3d_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
